fix saving cost rate economic